--- a/votw-wfs-test.ipynb
+++ b/votw-wfs-test.ipynb
@@ -674,6 +674,8 @@
    "outputs": [],
    "source": [
     "# Save as GeoJSON, which is automatically rendered on github!\n",
+    "# NOTE: doesn't seem to be official geojson that is returned... (no projection info)\n",
+    "# This could be issue w/ WFS or database construction...\n",
     "wfs = WebFeatureService(url='https://webservices.volcano.si.edu/geoserver/GVP-VOTW/wfs', version='2.0.0')\n",
     "typename = 'GVP-VOTW:VOTW_Holocene_Volcanoes'\n",
     "output = 'json'\n",
