commented line to save file, added tag 1.0

--- a/votw-take2.ipynb
+++ b/votw-take2.ipynb
@@ -1269,7 +1269,8 @@
    ],
    "source": [
     "# Save as geojson, which is automatically rendered on github!\n",
-    "gf.to_file('votw-vei4.geojson', driver='GeoJSON')\n",
+    "# NOTE: commented to not overwrite existing file\n",
+    "#gf.to_file('votw-vei4.geojson', driver='GeoJSON')\n",
     "print('Check out the awesome free interactive visualization this gives you!')\n",
     "print('https://github.com/scottyhq/votw/blob/master/votw-vei4.geojson')"
    ]
