commented a few notebook lines

--- a/votw-take2.ipynb
+++ b/votw-take2.ipynb
@@ -32,7 +32,7 @@
     "import geopandas as gpd \n",
     "from io import StringIO \n",
     "%matplotlib inline\n",
-    "%qtconsole"
+    "#%qtconsole #helpful for interaction"
    ]
   },
   {
